Import of NEILW/Inline-Python-0.15 from CPAN.
gitpan-cpan-distribution: Inline-Python
gitpan-cpan-version:      0.15
gitpan-cpan-path:         NEILW/Inline-Python-0.15.tar.gz
gitpan-cpan-author:       NEILW
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Inline::Python.
 
+0.15  Sun Jun 10 18:39:23 PDT 2001
+	- Ported to Inline 0.42.
+
 0.14  Thu Mar 22 08:50:33 PST 2001
 	- Added support for passing binary strings between Python & Perl.
 
