--- a/Python.pod
+++ b/Python.pod
@@ -325,8 +325,7 @@ suggestions throughout the development of Inline::Python.
 Copyright (c) 2000, Neil Watkiss.
 
 All Rights Reserved. This module is free software. It may be used,
-redistributed and/or modified under the terms of the Perl Artistic
-License.
+redistributed and/or modified under the same terms as Perl itself.
 
 (see http://www.perl.com/perl/misc/Artistic.html)
 
